# far-away

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: default.toml
evals/: coding_quality.jsonl  document_extraction.jsonl  router_accuracy.jsonl
src/agent_workforce_os/: __init__.py  app.py  cli.py
src/agent_workforce_os/agents/: base_imports.py  coding.py  document_intelligence.py  monitoring.py  orchestrator.py  performance.py  quality_gate.py  task_router.py
src/agent_workforce_os/core/: agent.py  auth.py  config.py  evals.py  llm.py  models.py  queue.py  storage.py  tracing.py
src/agent_workforce_os/tools/: __init__.py  document_adapters.py  document_parsers.py  workspace.py
tests/: test_agent_system.py
